fix paragraphs not showing new lines correctly

--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -34,6 +34,7 @@
     margin: 10px 0;
     width: 794px;
     word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .poiPreview {
