--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -22,6 +22,7 @@
     margin: 0px;
     padding: 20px;
     word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .pointOfInterestDetailsTop button {
